fix removeFav overlapping

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -141,6 +141,24 @@ button.homePlayBtn:focus {
     overflow-x: scroll;
     padding-bottom: 1rem;
   }
+
+  section.home-page div.favorites::-webkit-scrollbar {
+    height: 4px;
+    display: none;
+  }
+  section.home-page div.favorites::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background: transparent;
+  }
+
+  section.home-page div.favorites::-webkit-scrollbar-track-piece {
+    background: transparent;
+  }
+
+  section.home-page div.favorites::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    border-radius: 1rem;
+  }
   section.home-page div.favorites div.track-card {
     margin-right: 0.5rem;
     padding: 0rem 0rem 0rem;
